# zen-mcp-sever

./: .coveragerc  .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  LICENSE  MCP_DISCOVERY.md  README.md  SETUP_MACOS.md  USAGE.md  claude_config_example.json  code_quality_checks.ps1  code_quality_checks.sh  communication_simulator_test.py  communication_simulator_test_old.py  config.py  demo_collaboration.py  docker-compose.yml  gemini_server.py  log_monitor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-server.ps1  run-server.sh  run_gemini.bat  run_gemini.sh  run_integration_tests.ps1  run_integration_tests.sh  server.py  setup-docker-env.bat  setup-docker-env.ps1  setup-docker-env.sh  (+19 more)
.claude/: settings.example.json  settings.json  settings.local.json
.github/: FUNDING.yml  pull_request_template.md
conf/: custom_models.json  openrouter_models.json
docker/: README.md
docs/: README.md  adding_providers.md  adding_tools.md  advanced-usage.md  ai-collaboration.md  ai_banter.md  configuration.md  context-revival.md  contributions.md  custom_models.md  docker-deployment.md  docker-user-guide.md  gemini-setup.md  locale-configuration.md  logging.md  openrouter.md  setup-troubleshooting.md  testing.md  troubleshooting.md  wsl-setup.md
examples/: claude_config_docker_home.json  claude_config_macos.json  claude_config_windows.json  claude_config_wsl.json
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
patch/: README.md  patch_crossplatform.py  validation_crossplatform.py
prompts/: __init__.py  tool_prompts.py
providers/: __init__.py  base.py  custom.py  dial.py  gemini.py  openai.py  openai_compatible.py  openai_provider.py  openrouter.py  openrouter_registry.py  registry.py  xai.py
scripts/: README.md  bump_version.py
simulator_tests/: __init__.py  base_test.py  conversation_base_test.py  log_utils.py  test_analyze_validation.py  test_basic_conversation.py  test_chat_simple_validation.py  test_codereview_validation.py  test_consensus_conversation.py  test_consensus_stance.py  test_consensus_three_models.py  test_consensus_workflow_accurate.py  test_content_validation.py  test_conversation_chain_validation.py  test_cross_tool_comprehensive.py  test_cross_tool_continuation.py  test_debug_certain_confidence.py  test_debug_validation.py  test_line_number_validation.py  test_logs_validation.py  test_model_thinking_config.py  test_o3_model_selection.py  test_o3_pro_expensive.py  test_ollama_custom_url.py  test_openrouter_fallback.py  test_openrouter_models.py  test_per_tool_deduplication.py  test_planner_continuation_history.py  test_planner_validation.py  test_precommitworkflow_validation.py  test_prompt_size_limit_bug.py  test_redis_validation.py  test_refactor_validation.py  test_secaudit_validation.py  test_testgen_validation.py  test_thinkdeep_validation.py  test_token_allocation_validation.py  test_vision_capability.py  test_xai_models.py
systemprompts/: __init__.py  analyze_prompt.py  chat_prompt.py  codereview_prompt.py  consensus_prompt.py  debug_prompt.py  docgen_prompt.py  planner_prompt.py  precommit_prompt.py  refactor_prompt.py  secaudit_prompt.py  (+4 more)
(+205 files in other folders)
